<resources>
    <string name="app_name">Android Trial</string>

    <string name="search">Search</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="more">More &#8230;</string>
    <string name="more_teams">Load More Teams &#8230;</string>
    <string name="more_players">Load More Players &#8230;</string>
    <string name="no_players">No players found</string>
    <string name="no_teams">No teams found</string>
    <string name="no_result">No results found</string>
    <string name="search_hint">Team &amp; players search text</string>
    <string name="search_error">Something went wrong</string>
    <string name="search_players">Players search text</string>
    <string name="fav_players">Players  Saved</string>
</resources>
