<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nalcalag.androidtrial.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:contentDescription="@string/search"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_et"
            android:hint="@string/search_hint"
            android:textSize="15sp"
            android:layout_weight="1"
            android:inputType="text" />
        <Button
            android:id="@+id/search_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/players_layout">
                <TextView
                    android:id="@+id/players_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/players"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/textlines"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/no_players"
                    android:text="@string/no_result"
                    android:gravity="center"
                    android:visibility="gone"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/players_listView"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_more_players"
                    android:gravity="center"
                    android:text="@string/more"/>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/teams_layout">
                <TextView
                    android:id="@+id/teams_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teams"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/textlines"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/no_teams"
                    android:text="@string/no_result"
                    android:gravity="center"
                    android:visibility="gone"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/teams_listView"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/read_more_teams"
                    android:gravity="center"
                    android:text="@string/more"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
