<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="26dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/search_layout"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:contentDescription="@string/search"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_et"
            android:hint="@string/search_players"
            android:textSize="15sp"
            android:layout_weight="1"
            android:inputType="text" />
        <Button
            android:id="@+id/search_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>

    <TextView
        android:id="@+id/players_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fav_players"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/textlines"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/players_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

</LinearLayout>